--- a/ngnix.yml
+++ b/ngnix.yml
@@ -1,5 +1,7 @@
 ---
 - hosts: all
+  become: true
+  become_user: root
   tasks:
    - name: Install Nginx
      apt: pkg=nginx state=installed update_cache=true
