--- a/ngnix.yml
+++ b/ngnix.yml
@@ -1,7 +1,8 @@
 ---
 - hosts: all
+  roles:
+    - root
   become: true
-  become_user: root
   tasks:
    - name: Install Nginx
      apt: pkg=nginx state=installed update_cache=true
