--- a/ngnix.yml
+++ b/ngnix.yml
@@ -1,6 +1,5 @@
 ---
 - hosts: all
-  become: true
   tasks:
    - name: Install Nginx
-     yum: pkg=nginx state=installed update_cache=true
+     apt: pkg=nginx state=installed update_cache=true
