--- a/ngnix3.yml
+++ b/ngnix3.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: all
-  sudo: yes
+  become_method : 'sudo'
   tasks:
-   - name: Install Nginx
+   - name: Install Java
      yum: name=java state=latest
