--- a/ngnix3.yml
+++ b/ngnix3.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: all
-  become_method : 'sudo'
+  become: yes
   tasks:
-   - name: Install Java
-     yum: name=java state=latest
+   - name: install maven (and other packages if needed)
+     yum: name={{ item }} state=latest
+     with_items:
+       - maven
