--- a/ngnix3.yml
+++ b/ngnix3.yml
@@ -14,6 +14,11 @@
       name: nginx
       state: present
 
+  - name: Install maven
+    yum:
+      name: maven
+      state: present
+
   - name: Start NGiNX
     service:
       name: nginx
