--- a/dcoker-stack.yml
+++ b/dcoker-stack.yml
@@ -20,10 +20,10 @@ services:
         constraints: [node.role == manager]
       restart_policy:
         condition: on-failure
-      ports:
-      - "8080:80"
     networks:
       - webnet
+    environment:
+      MYSQL_ROOT_PASSWORD: password
   visualizer:
     image: dockersamples/visualizer:stable
     ports:
@@ -37,4 +37,3 @@ services:
       - webnet
 networks:
   webnet:
-
