--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -1,40 +1,42 @@
 version: "3"
 services:
+
   wordpress:
-    # replace username/repo:tag with your name and image details
     image: wordpress
-    links:
+    depends_on:
       - mysql:mysql
+    ports:
+      - 8080:80
+    networks:
+      - frontend
     deploy:
-      replicas: 5
+      replicas: 6
       restart_policy:
         condition: on-failure
-      ports:
-      - "8000:80"
-    networks:
-      - webnet
+
   mysql:
     image: mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=password
+    networks:
+      - frontend
     deploy:
       placement:
         constraints: [node.role == manager]
-      restart_policy:
-        condition: on-failure
-    networks:
-      - webnet
-    environment:
-      MYSQL_ROOT_PASSWORD: password
+
   visualizer:
     image: dockersamples/visualizer:stable
     ports:
-      - "8080:8080"
+      - 9000:8080
+    networks:
+      - frontend
+    stop_grace_period: 1m30s
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     deploy:
       placement:
         constraints: [node.role == manager]
-    networks:
-      - webnet
-  
+
+
 networks:
-webnet:
+frontend:
